--- a/pom.xml
+++ b/pom.xml
@@ -142,6 +142,11 @@
             <artifactId>google-api-services-oauth2</artifactId>
             <version>v2-rev98-1.21.0</version>
         </dependency>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.10</version>
+        </dependency>
     </dependencies>
 
     <properties>
